# reporg

./: .gitignore  .gitmodules  README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: .env  Cargo.toml  README.md  sqlite.db
backend/migrations/2023-12-18-133914_create_cafe/: down.sql  up.sql
backend/migrations/2023-12-18-134555_create_state/: down.sql  up.sql
backend/migrations/2023-12-18-134607_insert_states/: down.sql  up.sql
backend/migrations/2023-12-18-141815_create_user/: up.sql
backend/migrations/2023-12-18-141818_create_guest/: down.sql  up.sql
backend/migrations/2023-12-18-141823_create_supporter/: down.sql  up.sql
backend/migrations/2023-12-18-142415_create_device/: down.sql  up.sql
backend/migrations/2023-12-18-142652_create_meeting/: down.sql  up.sql
backend/migrations/2023-12-18-142655_create_message/: down.sql  up.sql
backend/src/: error.rs  lib.rs  main.rs  permissions.rs  schema.rs  settings.rs  utils.rs
backend/src/entities/: cafe.rs  mod.rs  prelude.rs  user.rs
backend/src/migrator/: m20240112_000001_create_user_table.rs  m20240112_000002_create_cafe_table.rs  mod.rs
backend/src/models/: cafe.rs  mod.rs  schema.rs  user.rs
backend/src/services/: cafe.rs  identity.rs  login.rs  mod.rs  user.rs
backend/tests/: cafe.rs  cors.rs  user.rs
backend/tests/common/: mod.rs
diagrams/: datamodel.drawio
docs/: 404.html  atom.xml  index.html  robots.txt  search_index.de.js  sitemap.xml
docs/authors/: index.html
docs/authors/tom/: index.html
docs/blog/: index.html
docs/blog/page/1/: index.html
docs/blog/projekt-reporg/: index.html
docs/docs/: index.html
docs/docs/contributing/: index.html
docs/docs/contributing/code-of-conduct/: index.html
docs/docs/contributing/how-to-contribute/: index.html
docs/docs/developer/: index.html
docs/docs/developer/datamodel/: index.html
docs/docs/getting-started/: index.html
docs/docs/getting-started/introduction/: index.html
docs/docs/getting-started/quick-start/: index.html
docs/docs/help/: index.html
docs/docs/help/faq/: index.html
docs/docs/user/: index.html
docs/docs/user/user/: index.html
docs/privacy-policy/: index.html
frontend/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  index.js  index.scss
frontend/src/: app.rs  main.rs
frontend/src/components/: input.rs  mod.rs  nav.rs  side_menu.rs  title.rs  user.rs
frontend/src/views/: contact.rs  home.rs  mod.rs  not_found.rs  register.rs
frontend/src/views/members/: mod.rs  one.rs  three.rs  two.rs
frontend/tests/: landing_page.rs
zola/: .gitignore  README.md  build.sh  config.toml
zola/content/: _index.md
zola/content/authors/: _index.md  tom.md
zola/content/blog/: projekt_reporg.md
zola/content/docs/: _index.md
zola/content/docs/contributing/: _index.md  code-of-conduct.md  how-to-contribute.md
zola/content/docs/developer/: _index.md  datamodel.md
zola/content/docs/getting-started/: _index.md  introduction.md  quick-start.md
zola/content/docs/help/: faq.md
zola/content/docs/user/: _index.md  user.md
zola/content/privacy-policy/: _index.md
zola/static/: CNAME
