[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["actix-redis", "cookie-session", "redis", "rand", "redis-rs-session", "actix"] }
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "sqlite", "r2d2", "chrono", "time", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["postgres", "sqlite"] }
dotenvy = "0.15.7"
log = { version = "0.4.20", features = ["serde"] }
r2d2 = "0.8.10"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.23"
