[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-identity = "0.7.0"
actix-session = { version = "0.9.0", features = ["actix-redis", "cookie-session", "redis", "rand", "redis-rs-session", "actix"] }
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.4"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["serde"] }
openidconnect = { version = "3.4.0", features = ["curl"] }
r2d2 = "0.8.10"
sea-orm = { version = "0.12.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
sea-orm-migration = { version = "0.12.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.11.23", features = ["cookies"] }
